--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.onkyo",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Control Onkyo AVRs with EISCP protocol from ioBroker",
   "author": "Oliver Wagner <owagner@tellerulam.com>",
   "contributors": [
@@ -32,12 +32,17 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-compress": "~0.8.0",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-exec": "~0.4.5"
+    "grunt-exec": "~0.4.5",
+    "mocha": "^2.3.4",
+    "chai": "^3.4.1"
   },
   "bugs": {
     "url": "https://github.com/Eisbaeeer/ioBroker.onkyo/issues"
   },
   "main": "onkyo.js",
+  "scripts": {
+    "test": "node node_modules/mocha/bin/mocha"
+  }
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   }
