--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
 	"eiscp": "https://github.com/GermanBluefox/node-eiscp/tarball/master/"
   },
   "devDependencies": {
-    "grunt": "~0.4.4",
-    "grunt-replace": "~0.7.6",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-jscs": "~0.6.1",
-    "grunt-http": "~1.4.1",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-compress": "~0.8.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-exec": "~0.4.5",
-    "mocha": "^2.3.4",
-    "chai": "^3.4.1"
+      "grunt": "^0.4.5",
+      "grunt-replace": "^0.9.3",
+      "grunt-contrib-jshint": "^0.11.2",
+      "grunt-jscs": "^2.0.0",
+      "grunt-http": "^1.6.0",
+      "grunt-contrib-clean": "^0.6.0",
+      "grunt-contrib-compress": "^0.13.0",
+      "grunt-contrib-copy": "^0.8.0",
+      "grunt-exec": "^0.4.6",
+      "mocha": "^3.5.3",
+      "chai": "^4.1.2"
   },
   "bugs": {
     "url": "https://github.com/Eisbaeeer/ioBroker.onkyo-vis/issues"
